feat(frontend): Implement Next.js frontend with Admin Panel and enhanced features
    This commit introduces a comprehensive Next.js frontend for the Phoebe CMS,
    integrating various features and adhering to the project's technical specifications.

    Key features and improvements include:

    1.  **Project Setup & Infrastructure:**
        *   Initial Next.js project setup with Material UI (MUI) and Axios.
        *   Docker integration: `Dockerfile` for the Next.js app and updated `docker-compose.yml` for seamless backend-frontend deployment.
        *   Environment variable configuration for API base URL (`.env.local`).

    2.  **Core UI & Theming:**
        *   Custom Material UI theme (light/dark mode toggle) based on `FRONTEND_SPEC_NEXTJS.md` (colors, typography).
        *   Global `Layout` component with dynamic `AppBar` and `Footer`.
        *   `404` Not Found page for improved user experience.

    3.  **Authentication & Authorization:**
        *   `AuthContext` for global state management of user authentication and roles.
        *   Login page (`/admin/login`) with robust frontend validation.
        *   `ProtectedRoute` and `AdminRoute` for role-based access control to admin sections.
        *   Dynamic `AdminBar` displaying navigation links based on user roles (ADMIN/EDITOR).

    4.  **Public-facing Pages:**
        *   Homepage (`/`) displaying latest news with SSR.
        *   Article detail page (`/node/[id]`) with SSG/ISR for performance and SEO.
        *   Category page (`/category/[id]`) displaying articles by category with SSR.
        *   Search page (`/search`) with frontend search input and API integration.
        *   Placeholder informational pages in the footer (e.g., Technical Sheet, Contact).

    5.  **Admin Panel (CRUD Operations):**
        *   **News Management:**
            *   List all news articles (`/admin/news`) with pagination.
            *   Create new articles (`/admin/news/new`).
            *   Edit existing ar

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,5 +41,21 @@ services:
       timeout: 10s
       retries: 5
 
+  nextjs-app:
+    build:
+      context: ./frontends/nextjs
+      dockerfile: Dockerfile
+    container_name: nextjs-app
+    restart: always
+    depends_on:
+      news-app:
+        condition: service_healthy
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./frontends/nextjs:/app
+      - /app/node_modules
+      - /app/.next
+
 volumes:
   mysql_data:
