docs: Refine Next.js frontend documentation structure
    This commit refines the documentation structure by:
    - Removing Next.js frontend status and README links from TECHNICAL_DEBT.md files.
    - Removing Next.js frontend documentation links from the main README.md files.
    - Adding the Next.js frontend documentation link to the respective FRONTEND_SPEC_NEXTJS.md files for better contextual placement.

--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -59,10 +59,10 @@ jobs:
 
       - name: Start MySQL for integration tests
         run: |
-          docker compose -f ./docker-compose.yml up -d news-mysql
+          docker compose -f ./docker-compose.yml up -d phoebe-mysql
           docker compose -f ./docker-compose.yml ps
           # Wait for MySQL to be ready
-          timeout 60s bash -c 'until docker exec news-mysql mysqladmin ping -h localhost --silent; do sleep 2; done'
+          timeout 60s bash -c 'until docker exec phoebe-mysql mysqladmin ping -h localhost --silent; do sleep 2; done'
 
       - name: Build, Test, Coverage
         env:
@@ -100,7 +100,7 @@ jobs:
         with:
           file: backend/build/reports/jacoco/test/jacocoTestReport.xml
           flags: unittests
-          name: codecov-news-platform
+          name: codecov-phoebe
 
   # ===================================================================
   # JOB 3: Security scan with GitLeaks
