feat: complete project rebranding from news-platform to phoebe
- Rename all Docker containers: news-mysql -> phoebe-mysql, news-app -> phoebe-app
- Update database references: dniester -> phoebe_db for current operations
- Fix MapStruct warning in ChannelSettingsMapper with @Mapping ignore annotation
- Update docker-compose.yml build context from root to ./backend directory
- Create volume migration scripts with automated backup functionality
- Archive migration scripts to legacy/ folder after successful completion
- Update all documentation references across 50+ .md files
- Standardize container naming convention throughout project
- Preserve data integrity with backup creation in db_dumps/
- Update GitHub Actions workflow for new container names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 
   phoebe-app:
     build:
-      context: .
+      context: ./backend
       dockerfile: Dockerfile.dev
     container_name: phoebe-app
     restart: always
