--- a/backend/src/main/resources/application-ci.yml
+++ b/backend/src/main/resources/application-ci.yml
@@ -8,18 +8,23 @@ server:
 
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MYSQL   # H2 with MySQL compatibility mode
+    url: jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MySQL;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
     driver-class-name: org.h2.Driver
     username: sa
     password: ""
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: validate
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
     show-sql: false
+  
+  flyway:
+    enabled: true
+    locations: classpath:db/migration/common
+    baseline-on-migrate: true
 
 logging:
   level:
