--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -67,10 +67,10 @@ jobs:
           # Wait for MySQL to be ready
           timeout 60s bash -c 'until docker exec phoebe-mysql mysqladmin ping -h localhost --silent; do sleep 2; done'
           # Create test database and user
-          docker exec phoebe-mysql mysql -uroot -p${MYSQL_ROOT_PASSWORD:-root} -e "CREATE DATABASE IF NOT EXISTS phoebe_test;"
-          docker exec phoebe-mysql mysql -uroot -p${MYSQL_ROOT_PASSWORD:-root} -e "CREATE USER IF NOT EXISTS 'phoebe_user'@'%' IDENTIFIED BY 'phoebe_password';"
-          docker exec phoebe-mysql mysql -uroot -p${MYSQL_ROOT_PASSWORD:-root} -e "GRANT ALL PRIVILEGES ON phoebe_test.* TO 'phoebe_user'@'%';"
-          docker exec phoebe-mysql mysql -uroot -p${MYSQL_ROOT_PASSWORD:-root} -e "FLUSH PRIVILEGES;"
+          docker exec phoebe-mysql mysql -uroot -proot -e "CREATE DATABASE IF NOT EXISTS phoebe_test;"
+          docker exec phoebe-mysql mysql -uroot -proot -e "CREATE USER IF NOT EXISTS 'phoebe_user'@'%' IDENTIFIED BY 'phoebe_password';"
+          docker exec phoebe-mysql mysql -uroot -proot -e "GRANT ALL PRIVILEGES ON phoebe_test.* TO 'phoebe_user'@'%';"
+          docker exec phoebe-mysql mysql -uroot -proot -e "FLUSH PRIVILEGES;"
 
       - name: Validate Flyway Migrations
         env:
