--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -76,6 +76,8 @@ jobs:
 
       - name: Validate Flyway Migrations
         env:
+          CI: true
+          SPRING_PROFILES_ACTIVE: ci
           SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/phoebe_test
           SPRING_DATASOURCE_USERNAME: phoebe_user
           SPRING_DATASOURCE_PASSWORD: phoebe_password
