--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -184,10 +184,17 @@ flyway {
     outOfOrder = false
 }
 
-// Flyway validation task for CI
-task flywayValidateCI(type: org.flywaydb.gradle.task.FlywayValidateTask) {
+// Flyway validation task for CI - only runs when database is available
+task flywayValidateCI {
     group = 'verification'
     description = 'Validates Flyway migrations for CI environment'
+    doLast {
+        if (System.getenv('CI') == 'true' || System.getenv('SPRING_PROFILES_ACTIVE')?.contains('ci')) {
+            project.tasks.flywayValidate.execute()
+        } else {
+            println 'Skipping Flyway validation - not in CI environment'
+        }
+    }
 }
 
 tasks.check.dependsOn 'checkstyleMain', 'pmdMain', 'checkstyleTest', 'pmdTest'
