--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -190,7 +190,7 @@ task flywayValidateCI {
     description = 'Validates Flyway migrations for CI environment'
     doLast {
         if (System.getenv('CI') == 'true' || System.getenv('SPRING_PROFILES_ACTIVE')?.contains('ci')) {
-            project.tasks.flywayValidate.execute()
+            tasks.flywayValidate.actions.each { it.execute(tasks.flywayValidate) }
         } else {
             println 'Skipping Flyway validation - not in CI environment'
         }
