--- a/backend/src/test/resources/application-integration-test.yml
+++ b/backend/src/test/resources/application-integration-test.yml
@@ -6,16 +6,15 @@ spring:
       # Let Flyway manage the schema. Hibernate should only validate it.
       ddl-auto: validate
     show-sql: false # Set to true for debugging SQL queries
+    database-platform: org.hibernate.dialect.MySQLDialect
 
   # Defer datasource initialization until after Testcontainers has started
   sql:
     init:
       mode: never
 
-  # Flyway will run automatically, using the locations defined in the main application.yml
-  # or profile-specific files. No specific Flyway config is needed here.
-
-  # Disable H2 console for integration tests
-  h2:
-    console:
-      enabled: false
+  # Flyway configuration for integration tests
+  flyway:
+    enabled: true
+    locations: classpath:db/migration/common,classpath:db/migration/mysql
+    baseline-on-migrate: true
