--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -74,6 +74,7 @@ jobs:
       - name: Build, Test, Coverage
         env:
           SPRING_PROFILES_ACTIVE: ci
+          integration.test.profile: ci-integration
         run: cd backend && ./gradlew clean build test integrationTest jacocoTestReport --no-daemon --warning-mode all
 
       - name: Stop MySQL
