fix: separate CI and local integration test configurations
- Remove Testcontainers from CI environment to use Docker Compose MySQL
- Create separate LocalIntegrationTest for local development with Testcontainers
- Update Gradle task to pass ci parameter for proper profile selection
- Fix GitHub Actions workflow to use -Pci parameter

--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -75,7 +75,7 @@ jobs:
         env:
           SPRING_PROFILES_ACTIVE: ci
           integration.test.profile: ci-integration
-        run: cd backend && ./gradlew clean build test integrationTest jacocoTestReport --no-daemon --warning-mode all
+        run: cd backend && ./gradlew clean build test integrationTest jacocoTestReport -Pci --no-daemon --warning-mode all
 
       - name: Stop MySQL
         if: always()
