Fix integration test configuration and profile synchronization
- Synchronized CI and local test profiles (ci vs integration-test)
- Migrated all integration tests to use LocalIntegrationTest with Testcontainers
- Fixed application-integration-test.yml: ddl-auto=create-drop, flyway disabled
- Updated CI workflow to remove conflicting environment variables
- Individual tests now pass successfully with proper database isolation

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -173,8 +173,8 @@ task integrationTest(type: Test) {
     
     // Configure profile based on environment
     if (project.hasProperty('ci')) {
-        systemProperty 'integration.test.profile', 'ci-integration'
-        systemProperty 'spring.profiles.active', 'ci-integration'
+        systemProperty 'integration.test.profile', 'ci'
+        systemProperty 'spring.profiles.active', 'ci'
     } else {
         systemProperty 'integration.test.profile', 'integration-test'
         systemProperty 'spring.profiles.active', 'integration-test'
