--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -171,14 +171,9 @@ task integrationTest(type: Test) {
         showStackTraces = true
     }
     
-    // Configure profile based on environment
-    if (project.hasProperty('ci')) {
-        systemProperty 'integration.test.profile', 'ci'
-        systemProperty 'spring.profiles.active', 'ci'
-    } else {
-        systemProperty 'integration.test.profile', 'integration-test'
-        systemProperty 'spring.profiles.active', 'integration-test'
-    }
+    // Use Testcontainers everywhere - same profile for all environments
+    systemProperty 'integration.test.profile', 'integration-test'
+    systemProperty 'spring.profiles.active', 'integration-test'
     
     // Fix Gradle 9.0 deprecation warning
     systemProperty 'junit.jupiter.extensions.autodetection.enabled', 'true'
