--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -1,4 +1,4 @@
-name: Optimized Hybrid Java CI with Gradle, GitLeaks, Checkstyle, PMD
+name: Java CI with Gradle and Testcontainers
 
 on:
   push:
@@ -7,90 +7,18 @@ on:
     branches: [ "main", "develop", "master" ]
 
 jobs:
-  # ===================================================================
-  # JOB 1: Setup (checkout + Java + Gradle cache)
-  # ===================================================================
-  setup:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
-          fetch-depth: 0   # fetch full history (needed for GitLeaks)
-
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: 21
-
-      - name: Cache Gradle packages
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-  # ===================================================================
-  # JOB 2: Gradle build, lint, tests, coverage, static analysis
-  # ===================================================================
-  build_and_test:
-    runs-on: ubuntu-latest
-    needs: setup
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: phoebe_db
-        ports:
-          - 3306:3306
-        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Grant execute permission for Gradle wrapper
-        run: chmod +x backend/gradlew
-
-      - name: Cache Gradle packages
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
-      - name: Build, Test, Coverage with MySQL
-        run: cd backend && ./gradlew clean build test integrationTest jacocoTestReport --no-daemon --warning-mode all
-        env:
-          SPRING_PROFILES_ACTIVE: ci-integration
-
-      - name: Static Analysis (Checkstyle + PMD)
-        run: cd backend && ./gradlew checkstyleMain checkstyleTest pmdMain pmdTest --no-daemon --warning-mode all
-
-      - name: Upload test reports
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-reports
-          path: backend/build/reports/tests/test
-          if-no-files-found: warn
-          retention-days: 4
-
-      - name: Upload JaCoCo coverage
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: jacoco-report
-          path: backend/build/reports/jacoco/test/
-          if-no-files-found: warn
-          retention-days: 4
+          java-version: '21'
+          distribution: 'temurin'
+      - name: Enable Docker
+        run: sudo service docker start
+      - name: Run tests
+        run: cd backend && ./gradlew clean build integrationTest jacocoTestReport --no-daemon
 
       - name: Upload coverage to Codecov
         if: success()
@@ -99,28 +27,3 @@ jobs:
           file: backend/build/reports/jacoco/test/jacocoTestReport.xml
           flags: unittests
           name: codecov-phoebe
-
-  # ===================================================================
-  # JOB 3: Security scan with GitLeaks
-  # ===================================================================
-  security:
-    runs-on: ubuntu-latest
-    needs: setup
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Run GitLeaks scan
-        run: |
-          curl -sL https://github.com/gitleaks/gitleaks/releases/download/v8.18.0/gitleaks_8.18.0_linux_x64.tar.gz | tar xz
-          ./gitleaks detect --source . --verbose --redact --report-path .gitleaks-report.json
-
-      - name: Upload GitLeaks results
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: gitleaks-results
-          path: .gitleaks-report.json
-          retention-days: 4
