--- a/.github/workflows/gradle-ci.yml
+++ b/.github/workflows/gradle-ci.yml
@@ -20,12 +20,24 @@ jobs:
       - name: Wait for Docker to be fully ready
         run: |
           echo "Waiting for Docker..."
-          sleep 10s # Даем Docker 10 секунд на полную инициализацию
-          docker info # Проверяем статус Docker
-          docker ps -a # Показываем все контейнеры (если есть)
-      - name: Run tests
-        run: cd backend && ./gradlew clean build integrationTest jacocoTestReport --no-daemon --stacktrace --debug --console=plain
-
+          sleep 10s
+          docker info
+          docker ps -a
+      - name: Run tests (capture full Gradle output)
+        run: |
+          cd backend
+          ./gradlew clean build integrationTest jacocoTestReport --no-daemon --stacktrace --console=plain 2>&1 | tee build.log
+      - name: Upload Gradle build log
+        uses: actions/upload-artifact@v4
+        with:
+          name: gradle-build-log
+          path: backend/build.log
+      - name: Upload jacoco report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-report
+          path: backend/build/reports/jacoco
       - name: Upload coverage to Codecov
         if: success()
         uses: codecov/codecov-action@v4
