Update Dockerfile, Dockerfile.dev, docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
   phoebe-app:
     build:
-      context: ./backend
+      context: .
       dockerfile: Dockerfile.dev
     container_name: phoebe-app
     restart: always
@@ -32,13 +32,12 @@ services:
       SPRING_DATASOURCE_PASSWORD: ${MYSQL_ROOT_PASSWORD:-root}
     ports:
       - "8080:8080"
-    volumes:
-      - ./backend:/app/backend
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/"]
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
       interval: 30s
       timeout: 10s
       retries: 5
+      start_period: 60s
 
   nextjs-app:
     build:
