--- a/frontends/nextjs/.env.local
+++ b/frontends/nextjs/.env.local
@@ -1,2 +1,2 @@
-# The backend service name in docker-compose is 'news-app'
-NEXT_PUBLIC_API_BASE_URL=http://news-app:8080/api/public
+# The backend service name in docker-compose is 'phoebe-app'
+NEXT_PUBLIC_API_BASE_URL=http://phoebe-app:8080/api/public
