--- a/frontends/nextjs/Dockerfile
+++ b/frontends/nextjs/Dockerfile
@@ -1,29 +1,14 @@
-# Dockerfile for Next.js Frontend
+FROM node:20-alpine
 
-# 1. Install dependencies
-FROM node:20-alpine AS deps
 WORKDIR /app
-COPY package.json ./
-COPY package-lock.json ./  # Re-adding this line
-RUN npm install
 
-# 2. Build the application
-FROM node:20-alpine AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
+COPY package*.json ./
+RUN npm install --registry https://registry.npmjs.org/ --verbose
+
 COPY . .
+
 RUN npm run build
 
-# 3. Run the application
-FROM node:20-alpine AS runner
-WORKDIR /app
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package.json ./package.json
-
-# Expose the port Next.js runs on
 EXPOSE 3000
 
-# Start the application
 CMD ["npm", "start"]
