--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,12 +32,13 @@ services:
       SPRING_DATASOURCE_PASSWORD: ${MYSQL_ROOT_PASSWORD:-root}
     ports:
       - "8080:8080"
+    volumes:
+      - ./backend:/app/backend
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://localhost:8080/actuator/health" ]
+      test: ["CMD", "curl", "-f", "http://localhost:8080/"]
       interval: 30s
       timeout: 10s
       retries: 5
-      start_period: 60s
 
   nextjs-app:
     build:
