--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -4,23 +4,20 @@
 # Uses Java 21 with Gradle for development with hot reload
 # =========================================================
 
-# Use official OpenJDK 21 Alpine image for small size
 FROM eclipse-temurin:21-jdk-alpine
 
-# Set working directory inside container
+# Install curl for health checks
+RUN apk add --no-cache curl
+
 WORKDIR /app
 
 # Copy backend source code to container
-# This includes build.gradle, settings.gradle, src/, etc.
 COPY backend/ .
 
 # Make Gradle wrapper executable
 RUN chmod +x ./gradlew
 
-# Expose Spring Boot default port
 EXPOSE 8080
 
 # Run Spring Boot application with Gradle
-# --no-daemon: Run without daemon for better container lifecycle management
-# bootRun: Spring Boot task that supports hot reload when volumes are mounted
 CMD ["./gradlew", "bootRun", "--no-daemon"]
