Update helth parameters of docker-compose.yml

--- a/.env.dev
+++ b/.env.dev
@@ -7,17 +7,14 @@
 # MySQL root password (simple, for local dev only)
 MYSQL_ROOT_PASSWORD=root
 # Database schema name (matches migration scripts)
-MYSQL_DATABASE=dniester
-# Dev-time app user (optional)
-MYSQL_USER=devuser
-MYSQL_PASSWORD=devpass
+MYSQL_DATABASE=phoebe_db
 
 # Spring Boot application ports
 SPRING_LOCAL_PORT=8080
 DATABASE_LOCAL_PORT=3306
 
 # Spring Boot datasource config (dev uses root account)
-SPRING_DATASOURCE_URL=jdbc:mysql://mysql:3306/dniester?useUnicode=true&characterEncoding=utf8mb4&useSSL=false
+SPRING_DATASOURCE_URL=jdbc:mysql://phoebe-mysql:3306/phoebe_db?useUnicode=true&characterEncoding=utf8mb4&useSSL=false
 SPRING_DATASOURCE_USERNAME=root
 SPRING_DATASOURCE_PASSWORD=root
 
