--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,10 +35,7 @@ services:
     volumes:
       - ./backend:/app/backend
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
+      disable: true
 
   nextjs-app:
     build:
