--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,12 +2,16 @@
 # Dockerfile.dev
 # Local development image for Phoebe backend
 # Uses Java 21 with Gradle for development with hot reload
+# Uses standard Ubuntu-based image to avoid encoding issues
 # =========================================================
 
-FROM eclipse-temurin:21-jdk-alpine
+FROM eclipse-temurin:21-jdk
 
-# Install curl for health checks
-RUN apk add --no-cache curl
+# Install curl for health checks and basic tools
+RUN apt-get update && \
+    apt-get install -y curl && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
