--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -7,7 +7,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none # Flyway will manage the schema
+      ddl-auto: none # Flyway управляет схемой
     show-sql: true
     properties:
       hibernate:
@@ -17,3 +17,15 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration/common,classpath:db/migration/mysql
+
+# ====== Spring Boot Actuator ======
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info
+  endpoint:
+    health:
+      show-details: always
+  server:
+    base-path: /actuator
