--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -1,31 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://${DB_HOST:localhost}:3306/phoebe_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/phoebe_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
-    password: root
+    password: root 
     driver-class-name: com.mysql.cj.jdbc.Driver
-
   jpa:
     hibernate:
-      ddl-auto: none # Flyway управляет схемой
+      ddl-auto: validate # or 'none', if you manage the schema manually
     show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-    database-platform: org.hibernate.dialect.MySQLDialect
-
   flyway:
     enabled: true
-    locations: classpath:db/migration/common,classpath:db/migration/mysql
-
-# ====== Spring Boot Actuator ======
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info
-  endpoint:
-    health:
-      show-details: always
-  server:
-    base-path: /actuator
